Working on spacing issue on 3rd skill col

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -29,6 +29,9 @@
         align-items: center;
         margin: 0 auto;
       }
+      .col > ul:nth-child(3) {
+        color: red;
+      }
     }
   }
   #work {
